# rust-api

./: Cargo.toml
.metals/: metals.lock.db  metals.mv.db
src/: lib.rs  main.rs
src/routes/: custom_json_extractor.rs  get_json.rs  hello_world.rs  mirror_body_json.rs  mirror_user_agent.rs  mod.rs  path_variables.rs  read_middleware_custom_header.rs  returns_201.rs  set_middleware_custom_header.rs  validate_data.rs
